# -*- mode: autoconf -*-

AC_INIT([pugixml],[1.6.0],)

AM_INIT_AUTOMAKE([foreign -Wno-portability subdir-objects dist-bzip2 nostdinc])
AM_SILENT_RULES([yes])

AC_PROG_CXX

AC_PROG_LIBTOOL
AC_PROG_MAKE_SET(gmake)
AM_PROG_AS

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(src/Makefile)
AC_CONFIG_FILES(tests/Makefile)

AC_OUTPUT()
